--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "postinstall": "remix setup node"
   },
   "dependencies": {
+    "@prisma/client": "^3.10.0",
     "@remix-run/react": "^1.2.3",
     "@remix-run/vercel": "^1.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.2.3"
+    "remix": "^1.2.3",
+    "siwe": "^1.1.2",
+    "wagmi": "^0.2.17"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.2.3",
@@ -29,6 +32,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.9.0",
     "postcss": "^8.4.7",
+    "prisma": "^3.10.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5"
   },
