--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remix-app-template",
+  "name": "fourem",
   "private": true,
   "description": "",
   "license": "",
@@ -9,12 +9,16 @@
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
     "dev": "concurrently \"npm run dev:css\" \"cross-env NODE_ENV=development remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
-    "postinstall": "remix setup node"
+    "postinstall": "remix setup node",
+    "seed": "node --require esbuild-register prisma/seed.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.5",
     "@prisma/client": "^3.10.0",
     "@remix-run/react": "^1.2.3",
     "@remix-run/vercel": "^1.2.3",
+    "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.2.3",
@@ -25,11 +29,14 @@
     "@remix-run/dev": "^1.2.3",
     "@remix-run/eslint-config": "^1.2.3",
     "@remix-run/serve": "^1.2.3",
+    "@tailwindcss/forms": "^0.4.0",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
+    "esbuild-register": "^3.3.2",
     "eslint": "^8.9.0",
     "postcss": "^8.4.7",
     "prisma": "^3.10.0",
