--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@prisma/client": "^3.10.0",
     "@remix-run/react": "^1.2.3",
     "@remix-run/vercel": "^1.2.3",
+    "@tiptap/react": "^2.0.0-beta.108",
+    "@tiptap/starter-kit": "^2.0.0-beta.183",
     "ethers": "^5.6.0",
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
@@ -31,6 +33,7 @@
     "@remix-run/eslint-config": "^1.2.3",
     "@remix-run/serve": "^1.2.3",
     "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
