--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@prisma/client": "^3.10.0",
     "@remix-run/react": "^1.2.3",
     "@remix-run/vercel": "^1.2.3",
+    "@tiptap/extension-bubble-menu": "^2.0.0-beta.55",
+    "@tiptap/extension-color": "^2.0.0-beta.9",
+    "@tiptap/extension-text-style": "^2.0.0-beta.23",
     "@tiptap/react": "^2.0.0-beta.108",
     "@tiptap/starter-kit": "^2.0.0-beta.183",
     "ethers": "^5.6.0",
